[gd_scene load_steps=3 format=3 uid="uid://bp8ph5rnk0sth"]

[ext_resource type="Script" path="res://Scripts/player_interface.gd" id="1_r8yc1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqqtr"]
bg_color = Color(1, 0.188235, 0, 1)

[node name="PlayerInterface" type="Control"]
z_index = 1024
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r8yc1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
texture_filter = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -308.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 18.0
grow_horizontal = 0
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_bqqtr")
exp_edit = true
fill_mode = 1
show_percentage = false

[node name="FirstArm" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -62.0
offset_right = 62.0
offset_bottom = -8.0
grow_vertical = 0
color = Color(0.32549, 0.32549, 0.32549, 0.8)

[node name="Pos" type="Node2D" parent="CanvasLayer/FirstArm"]
position = Vector2(27, 47)

[node name="SecondArm" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 70.0
offset_top = -62.0
offset_right = 124.0
offset_bottom = -8.0
grow_vertical = 0
color = Color(0.32549, 0.32549, 0.32549, 0.8)

[node name="Pos" type="Node2D" parent="CanvasLayer/SecondArm"]
position = Vector2(27, 47)
